# omnifocus-mcp

./: CLAUDE.md  Makefile  README.md  pyproject.toml
src/omnifocus_mcp/: audit.py  bridge.py  prompts.py  server.py
src/omnifocus_mcp/scripts/: common.js.tpl
src/omnifocus_mcp/tools/: __init__.py  create.py  destructive.py  escape.py  read.py  review.py  update.py
tests/: _smoke.py  test_bridge.py  test_integration.py  test_server.py  test_tools_coverage.py  test_tools_scripts.py
